--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
+    "@clerk/nextjs": "^6.9.5",
     "@headlessui/react": "^2.2.0",
+    "@kinde-oss/kinde-auth-nextjs": "^2.4.6",
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-slot": "^1.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.14.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.9.16",
+    "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
@@ -27,6 +36,9 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.17",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
