--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "next-auth": "^4.24.11",
+    "next-nprogress-bar": "^2.4.3",
     "nodemailer": "^6.9.16",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
